<resources>
    <string name="app_name">IceBreaker</string>

    <!--Facebook-->
    <string name="facebook_app_id">786995148631562</string>
    <string name="fb_login_protocol_scheme">fb786995148631562</string>

    <!-- Back4App -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">QmEOPLDILJPXEuEzTJTzsmusgV7n6pXbbePsMglg</string>
    <string name="back4app_client_key">AFmwyK0BnLjhjw0qHncPd5V3OhnM6ickBpqweaQC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_issue">Issue with SignUp</string>
    <string name="successful_sign_up">Sign Up successful. Try to log in.</string>
    <string name="cancel_fb_login">The user cancelled the Facebook login.</string>
    <string name="sign_login_facebook">User signed up and logged in through Facebook.</string>
    <string name="login_facebook">User logged in through Facebook.</string>
    <string name="wait_moment">Please, wait a moment.</string>
    <string name="login_in">Logging in...</string>
    <string name="login_issue">Issue with login</string>
    <string name="success">Success!</string>
    <string name="saving_error">Error while saving!</string>
    <string name="oh_you">Oh, you!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="first_login">First Time Login!</string>
    <string name="welcome">Welcome!</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="user_save_successful">User save was successful!</string>
    <string name="username_min_length">username can\'t be less than 5 characters</string>
    <string name="username_empty_requirement">username can\'t be empty.</string>
    <string name="bio_empty_requirement">Bio can\'t be empty.</string>
    <string name="select_hobbies">Select Hobbies!</string>
    <string name="new_hobby">New Hobby</string>
    <string name="remove_hobby_question">Are you sure to remove hobby?</string>
    <string name="remove">Remove</string>
    <string name="Cancel">Cancel</string>
    <string name="removing_hobby_error">Error while removing hobby.</string>
    <string name="add">Add</string>
    <string name="google_search_api_key">AIzaSyBwn_I1TkDKDmYc6CA-PGa1CtW5NMgTP-8</string>
    <string name="search_engine_id">542bed92d39dcaf24</string>
    <string name="title_activity_pairing">PairingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hobbies">Hobbies</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="hobbies_in_common">Hobbies in common!</string>
    <string name="similar_hobbies_per_tag">Similar hobbies per tag.</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="create_new_hobby">Create new Hobby!</string>
    <string name="selected_tags_max_4">Selected tags (Max. 4)</string>
    <string name="hobby_name">Hobby Name</string>
    <string name="click_on_tags_to_select_them">Click on tags to select them.</string>
    <string name="sign_up_to_see_photos_and_videos_from_your_friends">Sign up to see photos and videos from your friends</string>
    <string name="by_signing_up_you_agree_to_our_terms_data_policy_and_cookies_policy">By signing up, you agree to our Terms, Data Policy and Cookies Policy</string>
    <string name="username">Username</string>
    <string name="e_mail">E-Mail</string>
    <string name="sign_up">Sign UP</string>
    <string name="welcome_to_icebreaker">Welcome to Icebreaker!</string>
    <string name="log_in_to_start_breaking_the_ice">Log in to start breaking the ice!</string>
    <string name="password">Password</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="log_in">Log In</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="search_user">Search User</string>
    <string name="scan_a_user_code_to_break_the_ice">Scan a user code to break the ice!</string>
    <string name="sorry_delete_hobby_screen">Sorry, you can\'t delete hobbies in this screen.</string>
    <string name="add_hobby">Add Hobby</string>
    <string name="add_hobby_to_profile">Add hobby to profile</string>
</resources>