<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/off_white">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_placeholder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:text="@string/welcome_to_icebreaker"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tvAppDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_to_start_breaking_the_ice"
        android:layout_below="@+id/tvAppTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"/>



    <Button
        android:id="@+id/btnLoginFB"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvOr"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/continue_with_facebook"
        android:backgroundTint="@color/FB_blue"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/light_gray"
        android:layout_below="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <View
        android:layout_width="150dp"
        android:layout_toLeftOf="@+id/tvOr"
        android:layout_alignTop="@+id/tvOr"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="0.8dp"
        android:background="@color/light_gray"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/tvOr" />
    <View
        android:layout_width="150dp"
        android:layout_toRightOf="@+id/tvOr"
        android:layout_alignTop="@+id/tvOr"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="0.8dp"
        android:background="@color/light_gray"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/tvOr" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/tvAppDescription"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_input"
        android:hint="@string/username"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/etUsername"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_input"
        android:hint="@string/password"
        android:textSize="14sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etPassword"
        android:backgroundTint="@color/light_blue"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/etUsername"
        android:layout_alignLeft="@+id/etUsername"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/light_green"
        android:text="@string/register"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignRight="@+id/btnLogin"
        android:textColor="@color/white"/>





</RelativeLayout>