<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/off_white">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icebreaker_logo_blue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up_to_see_photos_and_videos_from_your_friends"
        android:textSize="18dp"
        android:textColor="@color/gray_500"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_alignRight="@+id/etUsernameSearch"
        android:layout_alignLeft="@+id/etUsernameSearch"
        android:layout_alignEnd="@+id/etUsernameSearch"
        android:layout_alignStart="@+id/etUsernameSearch" />

    <EditText
        android:id="@+id/etUsernameSearch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tvDescription"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_input"
        android:hint="@string/username"
        android:textSize="14sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/etUsernameSearch"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_input"
        android:hint="@string/e_mail"
        android:textSize="14sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/etEmail"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_input"
        android:hint="Password"
        android:textSize="14sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etPassword"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_blue"
        android:layout_alignStart="@+id/etPassword"
        android:layout_alignEnd="@+id/etPassword"
        android:layout_alignRight="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword" />

    <TextView
        android:id="@+id/tvLegal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/by_signing_up_you_agree_to_our_terms_data_policy_and_cookies_policy"
        android:textSize="14dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textColor="@color/gray_500" />

</RelativeLayout>