<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:background="@color/off_white">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        tools:src="@tools:sample/avatars"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfilePicture"
        android:textColor="@color/light_black"
        android:text="TestProfileName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvHobbiesNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:text="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="@color/light_black"/>

    <TextView
        android:id="@+id/tvHobbiesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHobbiesNumber"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light_black"
        android:text="@string/hobbies"/>

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHobbiesText"
        tools:text="@tools:sample/lorem/random"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light_black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_above="@+id/btnEditProfile"/>

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:layout_alignParentLeft="true"
        android:backgroundTint="@color/light_blue"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/light_blue"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="50dp" />



</RelativeLayout>